[package]
name = "termkan"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/Siandfrance/Termkan"
license-file = "LICENSE"
keywords = [ "graphics", "terminal", "linux", "2d" ]
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
termios = "0.3"
libc = "0.2"