[package]
name = "termkan"
version = "0.4.0"
edition = "2021"
repository = "https://github.com/Siandfrance/Termkan"
description = "A *linux* terminal renderer library in rust."
license-file = "LICENSE"
keywords = [ "graphics", "terminal", "linux", "2d" ]
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
termios = "0.3"
libc = "0.2"
image = "0.24.2"